docs/envoy/v1.13.0/_sources/api-v3/extensions/filters/network/local_ratelimit/v3/local_rate_limit.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/filters/network/local_ratelimit/v3/local_rate_limit.proto:

Local rate limit
================

.. _extension_envoy.filters.network.local_ratelimit:


This extension may be referenced by the qualified name *envoy.filters.network.local_ratelimit*

.. note::
  

  This extension is intended to be robust against untrusted downstream traffic. It assumes that the upstream is trusted.

Local rate limit :ref:`configuration overview <config_network_filters_local_rate_limit>`.

.. _envoy_v3_api_msg_extensions.filters.network.local_ratelimit.v3.LocalRateLimit:

extensions.filters.network.local_ratelimit.v3.LocalRateLimit
------------------------------------------------------------

`[extensions.filters.network.local_ratelimit.v3.LocalRateLimit proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/extensions/filters/network/local_ratelimit/v3/local_rate_limit.proto#L19>`_


.. code-block:: json

  {
    "stat_prefix": "...",
    "token_bucket": "{...}",
    "runtime_enabled": "{...}"
  }

.. _envoy_v3_api_field_extensions.filters.network.local_ratelimit.v3.LocalRateLimit.stat_prefix:

stat_prefix
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The prefix to use when emitting :ref:`statistics
  <config_network_filters_local_rate_limit_stats>`.
  
  
.. _envoy_v3_api_field_extensions.filters.network.local_ratelimit.v3.LocalRateLimit.token_bucket:

token_bucket
  (:ref:`type.v3.TokenBucket <envoy_v3_api_msg_type.v3.TokenBucket>`, *REQUIRED*) The token bucket configuration to use for rate limiting connections that are processed by the
  filter's filter chain. Each incoming connection processed by the filter consumes a single
  token. If the token is available, the connection will be allowed. If no tokens are available,
  the connection will be immediately closed.
  
  .. note::
    In the current implementation each filter and filter chain has an independent rate limit.
  
  .. note::
    In the current implementation the token bucket's :ref:`fill_interval
    <envoy_v3_api_field_type.v3.TokenBucket.fill_interval>` must be >= 50ms to avoid too aggressive
    refills.
  
  
.. _envoy_v3_api_field_extensions.filters.network.local_ratelimit.v3.LocalRateLimit.runtime_enabled:

runtime_enabled
  (:ref:`config.core.v3.RuntimeFeatureFlag <envoy_v3_api_msg_config.core.v3.RuntimeFeatureFlag>`) Runtime flag that controls whether the filter is enabled or not. If not specified, defaults
  to enabled.
  
  

